# bevy_rapier

./: Cargo.toml
bevy_rapier3d/: Cargo.toml
src/physics/: components.rs  plugins.rs  systems.rs
src/render/: systems.rs
